--- a/devel/kdiff3/Makefile
+++ b/devel/kdiff3/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.113 2025/01/23 23:27:25 riastradh Exp $
+# $NetBSD: Makefile,v 1.114 2025/02/07 09:24:31 wiz Exp $
 
-DISTNAME=	kdiff3-1.10.7
-PKGREVISION=	7
+DISTNAME=	kdiff3-1.12.0
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_KDE:=kdiff3/}
 EXTRACT_SUFX=	.tar.xz
@@ -11,31 +10,26 @@ HOMEPAGE=	https://kde.org/applications/development/org.kde.kdiff3
 COMMENT=	File and directory diff and merge tool
 LICENSE=	gnu-gpl-v2
 
-USE_CMAKE=	yes
-USE_LANGUAGES=	c c++
-
-# Upstream states GCC < 8.2 support is "best effort only"; it is presently
-# confirmed to work without issue on NetBSD 9.x with GCC 7.5.
+USE_LANGUAGES=		c c++
+# upstream states GCC < 9.2 support is "best effort only"
 USE_CXX_FEATURES+=	c++17
+CMAKE_REQD+=		3.1
 
 BUILDLINK_TRANSFORM+=	rm:-Wl,--fatal-warnings
 
-TOOLS_DEPENDS.cmake=	cmake>=3.1:../../devel/cmake
-
+.include "../../devel/cmake/build.mk"
 .include "../../devel/boost-headers/buildlink3.mk"
-BUILDLINK_API_DEPENDS.extra-cmake-modules+=	extra-cmake-modules>=5.10.0
+.include "../../devel/boost-libs/buildlink3.mk"
 .include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
-BUILDLINK_API_DEPENDS.kcoreaddons+=	kcoreaddons>=5.80.0
-.include "../../devel/kcoreaddons/buildlink3.mk"
-.include "../../devel/kcrash/buildlink3.mk"
-.include "../../devel/kdoctools/buildlink3.mk"
-BUILDLINK_API_DEPENDS.ki18n+=	ki18n>=5.80.0
-.include "../../devel/ki18n/buildlink3.mk"
-.include "../../devel/kio/buildlink3.mk"
-.include "../../devel/kparts/buildlink3.mk"
+.include "../../devel/kf6-kconfig/buildlink3.mk"
+.include "../../devel/kf6-kcoreaddons/buildlink3.mk"
+.include "../../devel/kf6-kcrash/buildlink3.mk"
+.include "../../devel/kf6-ki18n/buildlink3.mk"
+.include "../../devel/kf6-kio/buildlink3.mk"
+.include "../../devel/qt6-qt5compat/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
-.include "../../graphics/kiconthemes/buildlink3.mk"
-.include "../../x11/kwidgetsaddons/buildlink3.mk"
-.include "../../x11/qt5-qtbase/buildlink3.mk"
+.include "../../x11/kf6-kwidgetsaddons/buildlink3.mk"
+.include "../../x11/kf6-kxmlgui/buildlink3.mk"
+.include "../../x11/qt6-qtbase/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
