--- a/www/py-wtforms/Makefile
+++ b/www/py-wtforms/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2024/03/06 21:39:44 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2025/02/07 09:27:02 adam Exp $
 
-DISTNAME=	wtforms-3.1.2
+DISTNAME=	wtforms-3.2.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=W/WTForms/}
@@ -10,23 +10,18 @@ HOMEPAGE=	https://wtforms.readthedocs.io/
 COMMENT=	Flexible forms validation and rendering library
 LICENSE=	modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling>=0:../../devel/py-hatchling
-DEPENDS+=	${PYPKGPREFIX}-babel>=2.6.0:../../devel/py-babel
-DEPENDS+=	${PYPKGPREFIX}-email_validator-[0-9]*:../../mail/py-email_validator
+TOOL_DEPENDS+=	${PYPKGPREFIX}-babel>=2.6.0:../../devel/py-babel
+TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling-[0-9]*:../../devel/py-hatchling
 DEPENDS+=	${PYPKGPREFIX}-markupsafe-[0-9]*:../../textproc/py-markupsafe
+# email
+DEPENDS+=	${PYPKGPREFIX}-email_validator-[0-9]*:../../mail/py-email_validator
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-USE_LANGUAGES=	# empty
+USE_LANGUAGES=	# none
 
 .include "../../lang/python/pyversion.mk"
-
 .if ${PYTHON_VERSION} > 311
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 .endif
-
-post-extract:
-	${FIND} ${WRKSRC} -type f -exec ${CHMOD} -x {} \;
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
