--- a/www/py-wtforms-components/Makefile
+++ b/www/py-wtforms-components/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2022/01/04 20:55:39 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/07 09:44:56 adam Exp $
 
-DISTNAME=	WTForms-Components-0.10.4
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
-PKGREVISION=	1
+DISTNAME=	wtforms_components-0.11.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=W/WTForms-Components/}
 
@@ -11,14 +10,18 @@ HOMEPAGE=	https://github.com/kvesteri/wtforms-components
 COMMENT=	Additional fields, validators and widgets for WTForms
 LICENSE=	modified-bsd
 
+WHEEL_NAME=	WTForms_Components-${PKGVERSION_NOREV}
+
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-intervals>=0.6.0:../../math/py-intervals
-DEPENDS+=	${PYPKGPREFIX}-six>=1.4.1:../../lang/py-six
-DEPENDS+=	${PYPKGPREFIX}-validators>=0.5.0:../../textproc/py-validators
-DEPENDS+=	${PYPKGPREFIX}-wtforms>=1.0.4:../../www/py-wtforms
+DEPENDS+=	${PYPKGPREFIX}-markupsafe>=1.0.0:../../textproc/py-markupsafe
+DEPENDS+=	${PYPKGPREFIX}-validators>=0.21:../../textproc/py-validators
+DEPENDS+=	${PYPKGPREFIX}-wtforms>=3.1.0:../../www/py-wtforms
+TEST_DEPENDS+=	${PYPKGPREFIX}-dateutil-[0-9]*:../../time/py-dateutil
+TEST_DEPENDS+=	${PYPKGPREFIX}-flexmock>=0.9.7:../../devel/py-flexmock
+TEST_DEPENDS+=	${PYPKGPREFIX}-wtforms-test>=0.1.1:../../www/py-wtforms-test
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27	# py-validators
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
