--- a/www/py-wtforms-sqlalchemy/Makefile
+++ b/www/py-wtforms-sqlalchemy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2024/11/11 07:29:30 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/02/07 09:48:20 adam Exp $
 
-DISTNAME=	WTForms-SQLAlchemy-0.4.1
+DISTNAME=	wtforms_sqlalchemy-0.4.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=W/WTForms-SQLAlchemy/}
@@ -10,13 +10,11 @@ HOMEPAGE=	https://github.com/wtforms/wtforms-sqlalchemy
 COMMENT=	WTForms integration for SQLAlchemy
 LICENSE=	modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-wtforms>=1.0.5:../../www/py-wtforms
-DEPENDS+=	${PYPKGPREFIX}-sqlalchemy>=0.7.10:../../databases/py-sqlalchemy
+TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling-[0-9]*:../../devel/py-hatchling
+DEPENDS+=	${PYPKGPREFIX}-sqlalchemy>=1.4:../../databases/py-sqlalchemy
+DEPENDS+=	${PYPKGPREFIX}-wtforms>=3.1:../../www/py-wtforms
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-USE_LANGUAGES=	# empty
+USE_LANGUAGES=	# none
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
