--- a/www/py-wtforms-alchemy/Makefile
+++ b/www/py-wtforms-alchemy/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2024/11/11 07:29:30 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2025/02/07 13:56:03 adam Exp $
 
-DISTNAME=	WTForms-Alchemy-0.18.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
-PKGREVISION=	1
+DISTNAME=	wtforms_alchemy-0.19.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	www databases python
 MASTER_SITES=	${MASTER_SITE_PYPI:=W/WTForms-Alchemy/}
 
@@ -11,24 +10,22 @@ HOMEPAGE=	https://github.com/kvesteri/wtforms-alchemy
 COMMENT=	Generates WTForms forms from SQLAlchemy models
 LICENSE=	modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-sqlalchemy>=1.0:../../databases/py-sqlalchemy
-DEPENDS+=	${PYPKGPREFIX}-sqlalchemy-utils>=0.32.6:../../databases/py-sqlalchemy-utils
-DEPENDS+=	${PYPKGPREFIX}-wtforms>=2.2:../../www/py-wtforms
-DEPENDS+=	${PYPKGPREFIX}-wtforms-components>=0.9.2:../../www/py-wtforms-components
-#TEST_DEPENDS+=	${PYPKGPREFIX}-enum34>=0:../../devel/py-enum34
-TEST_DEPENDS+=	${PYPKGPREFIX}-pygments>=1.2:../../textproc/py-pygments
-TEST_DEPENDS+=	${PYPKGPREFIX}-jinja2>=1.2:../../textproc/py-jinja2
+WHEEL_NAME=	WTForms_Alchemy-${PKGVERSION_NOREV}
+
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+DEPENDS+=	${PYPKGPREFIX}-sqlalchemy>=1.4:../../databases/py-sqlalchemy
+DEPENDS+=	${PYPKGPREFIX}-sqlalchemy-utils>=0.40.0:../../databases/py-sqlalchemy-utils
+DEPENDS+=	${PYPKGPREFIX}-wtforms>=3.1.0:../../www/py-wtforms
+DEPENDS+=	${PYPKGPREFIX}-wtforms-components>=0.11.0:../../www/py-wtforms-components
+TEST_DEPENDS+=	${PYPKGPREFIX}-dateutil-[0-9]*:../../time/py-dateutil
 TEST_DEPENDS+=	${PYPKGPREFIX}-docutils>=0.10:../../textproc/py-docutils
-TEST_DEPENDS+=	${PYPKGPREFIX}-flake8>=0.10:../../devel/py-flake8
 TEST_DEPENDS+=	${PYPKGPREFIX}-flexmock>=0.9.7:../../devel/py-flexmock
-TEST_DEPENDS+=	${PYPKGPREFIX}-isort>=3.9.6:../../devel/py-isort
-TEST_DEPENDS+=	${PYPKGPREFIX}-natsort>=3.9.6:../../textproc/py-natsort
-TEST_DEPENDS+=	${PYPKGPREFIX}-wtforms-test>=0:../../www/py-wtforms-test
+TEST_DEPENDS+=	${PYPKGPREFIX}-jinja2>=2.3:../../textproc/py-jinja2
+TEST_DEPENDS+=	${PYPKGPREFIX}-pygments>=1.2:../../textproc/py-pygments
+TEST_DEPENDS+=	${PYPKGPREFIX}-sqlalchemy-i18n>=0.8.2:../../databases/py-sqlalchemy-i18n
+TEST_DEPENDS+=	${PYPKGPREFIX}-wtforms-test>=0.1.1:../../www/py-wtforms-test
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
