--- a/www/py-PasteScript/Makefile
+++ b/www/py-PasteScript/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2024/11/11 07:29:14 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/02/07 15:22:50 adam Exp $
 
-DISTNAME=	PasteScript-3.6.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+DISTNAME=	pastescript-3.7.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pastes/PasteS/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=P/PasteScript/}
 
@@ -10,13 +10,13 @@ HOMEPAGE=	https://github.com/pasteorg/pastescript
 COMMENT=	Pluggable command-line frontend for setting up package file layouts
 LICENSE=	mit
 
+WHEEL_NAME=	${DISTNAME:S/pastes/PasteS/}
+
 DEPENDS+=	${PYPKGPREFIX}-PasteDeploy-[0-9]*:../../www/py-PasteDeploy
 DEPENDS+=	${PYPKGPREFIX}-paste>=3.0:../../www/py-paste
 DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
