--- a/chat/py-nbxmpp/Makefile
+++ b/chat/py-nbxmpp/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2025/02/06 21:46:15 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/07 21:43:29 adam Exp $
 
-DISTNAME=	nbxmpp-4.4.0
+DISTNAME=	nbxmpp-5.0.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	chat python
 MASTER_SITES=	${MASTER_SITE_PYPI:=n/nbxmpp/}
 
@@ -11,9 +10,11 @@ HOMEPAGE=	https://dev.gajim.org/gajim/python-nbxmpp
 COMMENT=	Asynchronous Python library for XMPP
 LICENSE=	gnu-gpl-v3
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=65.0.0:../../devel/py-setuptools
 DEPENDS+=	libsoup3-[0-9]*:../../net/libsoup3
 DEPENDS+=	${PYPKGPREFIX}-idna-[0-9]*:../../www/py-idna
-DEPENDS+=	${PYPKGPREFIX}-gobject3-[0-9]*:../../devel/py-gobject3
+DEPENDS+=	${PYPKGPREFIX}-gobject3>=3.42.0:../../devel/py-gobject3
+DEPENDS+=	${PYPKGPREFIX}-packaging-[0-9]*:../../devel/py-packaging
 DEPENDS+=	${PYPKGPREFIX}-precis-i18n>=1.0.0:../../textproc/py-precis-i18n
 
 USE_LANGUAGES=	# none
