--- a/archivers/php-pecl-zip/Makefile
+++ b/archivers/php-pecl-zip/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.26 2024/11/14 22:18:38 wiz Exp $
+# $NetBSD: Makefile,v 1.27 2025/02/08 03:25:24 taca Exp $
 #
 
 MODNAME=	zip
 PECL_VERSION=	1.22.4
 PKGNAME=	${PHP_PKG_PREFIX}-pecl-${MODNAME}-${PECL_VERSION}
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	archivers
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -12,7 +12,7 @@ HOMEPAGE=	https://pecl.php.net/package/zip
 COMMENT=	Zip management extension with libzip
 LICENSE=	php
 
-#PHP_VERSIONS_INCOMPATIBLE=	56
+CONFLICTS=		php${PHP_VER}-zip
 
 CONFIGURE_ARGS+=	--enable-zip
 CONFIGURE_ARGS+=	--with-libzip=${PREFIX}
