--- a/benchmarks/phoronix-test-suite/Makefile
+++ b/benchmarks/phoronix-test-suite/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.13 2024/02/19 15:43:34 taca Exp $
+# $NetBSD: Makefile,v 1.14 2025/02/08 03:28:48 taca Exp $
 #
 
 DISTNAME=	phoronix-test-suite-${PTS_VERSION}
 PTS_VERSION=	8.8.1
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	benchmarks
 MASTER_SITES=	https://www.phoronix-test-suite.com/releases/
 
@@ -12,12 +12,12 @@ HOMEPAGE=	https://www.phoronix-test-suite.com/
 COMMENT=	Phoronix Benchmarking Suite
 LICENSE=	gnu-gpl-v3
 
-DEPENDS+=	${PHP_PKG_PREFIX}-curl>=5.3:../../www/php-curl
-DEPENDS+=	${PHP_PKG_PREFIX}-gd>=5.3:../../graphics/php-gd
-DEPENDS+=	${PHP_PKG_PREFIX}-pcntl>=5.3:../../devel/php-pcntl
-DEPENDS+=	${PHP_PKG_PREFIX}-posix>=5.3:../../devel/php-posix
-DEPENDS+=	${PHP_PKG_PREFIX}-zip>=5.3:../../archivers/php-zip
-DEPENDS+=	${PHP_PKG_PREFIX}-zlib>=5.3:../../archivers/php-zlib
+DEPENDS+=	${PHP_PKG_PREFIX}-curl>=${PHP_BASE_VERS}:../../www/php-curl
+DEPENDS+=	${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
+DEPENDS+=	${PHP_PKG_PREFIX}-pcntl>=${PHP_BASE_VERS}:../../devel/php-pcntl
+DEPENDS+=	${PHP_PKG_PREFIX}-posix>=${PHP_BASE_VERS}:../../devel/php-posix
+DEPENDS+=	${PHP_PKG_PREFIX}-zip>=${PHP_BASE_VERS}:../../archivers/php-zip
+DEPENDS+=	${PHP_PKG_PREFIX}-zlib>=${PHP_BASE_VERS}:../../archivers/php-zlib
 
 INSTALLATION_DIRS=	bin
 INSTALLATION_DIRS+=	share/bash-completion.d
@@ -38,6 +38,11 @@ PLIST_VARS+=	systemd
 .if exists(/bin/systemd)
 PLIST.systemd=	yes
 .endif
+
+SUBST_CLASSES+=		paths
+SUBST_STAGE.paths=	pre-configure
+SUBST_FILES.paths+=	phoronix-test-suite
+SUBST_VARS.paths+=	PREFIX PHP_VER
 
 pre-install:
 	${FIND} ${WRKSRC} -name "*.orig" -print | ${XARGS} ${RM} -f
