--- a/databases/pear-MDB2/Makefile
+++ b/databases/pear-MDB2/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2019/07/03 07:28:21 nia Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/08 03:30:47 taca Exp $
 
 DISTNAME=	MDB2-2.5.0b5
+PKGREVISION=	1
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
