--- a/databases/pear-MDB2_Driver_pgsql/Makefile
+++ b/databases/pear-MDB2_Driver_pgsql/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2019/07/03 07:28:22 nia Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/08 03:30:48 taca Exp $
 
 DISTNAME=	MDB2_Driver_pgsql-1.5.0b4
+PKGREVISION=	1
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -8,7 +9,7 @@ HOMEPAGE=	https://pear.php.net/package/MDB2_Driver_pgsql
 COMMENT=	Pgsql MDB2 driver
 LICENSE=	modified-bsd
 
-DEPENDS+=	${PHP_PKG_PREFIX}-pgsql-[0-9]*:../../databases/php-pgsql
+DEPENDS+=	${PHP_PKG_PREFIX}-pgsql>=${PHP_BASE_VERS}:../../databases/php-pgsql
 DEPENDS+=	${PHP_PKG_PREFIX}-pear-MDB2>=2.5:../../databases/pear-MDB2
 
 PEAR_DIRRM_EXCLUDE=	lib/php/MDB2
