--- a/databases/php-mongodb/Makefile
+++ b/databases/php-mongodb/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.26 2025/01/28 09:03:17 riastradh Exp $
+# $NetBSD: Makefile,v 1.27 2025/02/08 03:30:48 taca Exp $
 
 MODNAME=	mongodb
+PKGREVISION=	1
 PECL_VERSION=	1.20.1
 CATEGORIES+=	databases
 
@@ -9,7 +10,7 @@ HOMEPAGE=	http://docs.mongodb.org/ecosystem/drivers/php/
 COMMENT=	MongoDB database driver
 LICENSE=	apache-2.0
 
-PHP_VERSIONS_ACCEPTED=74 81 82
+PHP_VERSIONS_ACCEPTED=	74 81 82
 
 USE_TOOLS+=		pkg-config gmake
 # To use system mongodb library, we require libmongocrypt package.
